<resources>
    <string name="app_name">掌上进程</string>
    <string name="main">主页</string>
    <string name="trigger">确认发起</string>
    <string name="login">登录</string>
    <string name="task">任务</string>
    <string name="register">注册</string>
    <string name="setting">设置</string>
    <string name="apply_for">申请</string>
    <string name="message">消息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="homePage">主页</string>
    <string name="comment">评论</string>
    <string name="note">备注</string>
    <string name="reply">回复</string>
    <string name="input">录入</string>
    <string name="del">删除</string>
    <string name="out_of_time">超时 </string>

    <string name="finish">已完成</string>
    <string name="unfinish">未完成</string>
    <string name="apply">提交申请</string>
    <string name="logout">退出登录</string>
    <string name="userinfo">个人资料</string>
    <string name="payment_sure">确认还款</string>
    <string name="payment_input">确认录入</string>
    <string name="change_tel">修改手机号</string>
    <string name="trigger_task">发起任务</string>
    <string name="forget_psw">忘记密码</string>
    <string name="reset_psw">重设密码</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="task_info">任务信息</string>
    <string name="whole_process">项目流程</string>
    <string name="payment_info">还款信息</string>
    <string name="payment_alert">还款提醒</string>
    <string name="clerk_list">员工列表</string>
    <string name="add_comment_success">添加评论</string>
    <string name="process_now">项目进行到：</string>
    <string name="process_percentage">完成进度：</string>
    <string name="task_type">任务类型：</string>
    <string name="credit_name">客户名称：</string>
    <string name="recommend">推荐机构： </string>
    <string name="apply_money">申请金额(万元)： </string>
    <string name="sponsor">经办人： </string>

    <string name="empty_notice">你还没有通知哦~</string>
    <string name="add_remark_success">添加备注成功</string>
    <string name="tel_please">请输入您的手机号码</string>
    <string name="tel_new_please">请输入您的新手机号码</string>
    <string name="psw_please">请设置您的登录密码</string>
    <string name="psw_new_please">请设置新的登录密码</string>
    <string name="psw_enter_please">请输入您的登录密码</string>
    <string name="verify_code_please">请输入您的验证码</string>
    <string name="search_please">请输入您要查询的内容</string>
    <string name="time_remain">距离此节点截止时间还有 </string>
    <string name="comment_please">请输入您的评论</string>
    <string name="note_please">请输入您的备注</string>
    <string name="exit">再按一次退出掌上进程</string>


    <!--err_message-->
    <string name="err_tel_empty">号码不能为空</string>
    <string name="err_empty_input">输入项不能为空</string>
    <string name="err_code">验证码不正确</string>
    <string name="err_search_empty">搜索内容不能为空</string>
    <string name="psw_input_please">请输入您的登录密码</string>
    <string name="no_notice">您还没有提醒或通知哦~</string>
    <string name="no_task">没有相关任务信息~</string>
    <string name="task_deleted">该任务已删除</string>
    <string name="err_net">当前网络问题，请稍后重试</string>
    <string name="auto_login">自动登录</string>
    <string name="branch_id">请输入支行账号</string>
    <string name="branch_login">支行登录</string>


</resources>
