<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.meishipintu.bankoa.views.activities.LoginActivity">

    <include layout="@layout/titlebar_regist"
        android:id="@+id/titlebar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titlebar"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_alignParentStart="true">
            <com.meishipintu.library.view.CircleImageView
                android:id="@+id/civ_head"
                android:layout_width="83dp"
                android:layout_height="83dp"
                android:layout_centerInParent="true"
                android:background="@drawable/icon_avatar"/>
        </RelativeLayout>
        <!--号码输入-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <ImageView
                android:id="@+id/icon_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_phone_number"/>
            <EditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_tel"
                android:layout_marginLeft="22dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:hint="@string/branch_id"
                android:textColorHint="@color/hint_text"
                android:textSize="16sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/edit_text_back"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <!--密码输入-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="26dp">
            <ImageView
                android:id="@+id/icon_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_password"/>
            <EditText
                android:id="@+id/et_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_psw"
                android:layout_marginLeft="22dp"
                android:background="@null"
                android:layout_centerVertical="true"
                android:hint="@string/psw_enter_please"
                android:textColorHint="@color/hint_text"
                android:textSize="16sp"
                android:inputType="textPassword"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/edit_text_back"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape_bt_theme"
            android:layout_marginTop="28dp"
            android:textSize="@dimen/title_text"
            android:textColor="@color/white"
            android:text="@string/login"/>
    </LinearLayout>
</RelativeLayout>
